# wooz

./: .gitignore  .releaserc.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/wooz/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/tinker/: cli.py
src/wooz/: __init__.py  agent.py  cli.py  client.py  config.py  context.py  errors.py  llm.py  playback.py  prompts.py  slash.py  spotify.py  state.py  theme.py  tools.py  ui.py
tasks/: lessons.md
tests/: test_smoke.py
