[project]
name = "tinker"
version = "0.1.0"
description = "Local AI assistant powered by small LLMs via Ollama"
readme = "README.md"
authors = [
    { name = "Valentin Garnier", email = "valentingarnier@live.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
tinker = "tinker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
