[project]
name = "wooz"
version = "2.4.0"
description = "AI DJ for your terminal — reads what you are working on, plays the right music."
readme = "README.md"
authors = [
    { name = "Valentin Garnier", email = "valentingarnier@live.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "spotipy>=2.26.0",
    "typer>=0.25.1",
]

[project.scripts]
wooz = "wooz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["spotipy.*"]
ignore_missing_imports = true
